--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -4,12 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.project.onur.playerx.fragment.TwoFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="two"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+
+
+
+    <include layout="@layout/toolbar" />
 
 </RelativeLayout>
