--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,12 +24,17 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="ToolbarTextAppearance" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="FacebookLoginButton">
     <item name="android:textSize">12sp</item>
     <item name="android:background">@drawable/facebook_button_style</item>
     <item name="android:layout_marginTop">10dp</item>
     <item name="android:layout_marginBottom">10dp</item>
-    <item name="android:layout_gravity">center_horizontal</item>
+    <item name="android:layout_gravity">center_vertical</item>
 </style>
 
 </resources>
