--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -103,12 +103,6 @@
                         custom:tickInterval="5"
                         custom:tickStart="5" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="36dp"
-                        android:text="@string/range" />
-
                 </LinearLayout>
 
                 <LinearLayout
@@ -123,7 +117,8 @@
                         android:layout_height="wrap_content"
                         android:clickable="true"
                         android:text="@string/change_password"
-                        android:textColor="@color/colorPrimaryDark" />
+                        android:textColor="@color/colorPrimaryDark"
+                        android:visibility="invisible"/>
 
 
                 </LinearLayout>
