--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -2,19 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/camera"
+        android:title="@string/camera" />
 
     <item
-        android:id="@+id/navigation_messages"
-        android:icon="@drawable/ic_messages"
-        android:title="@string/title_messages" />
+        android:id="@+id/select_photo"
+        android:title="@string/select_photo" />
 
     <item
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_profile"
-        android:title="@string/title_profile" />
+        android:id="@+id/remove_photo"
+        android:title="@string/remove_photo" />
 
 
 </menu>
