--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/lineer_change_password"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.project.onur.playerx.fragment.ChangePasswordFragment">
