--- a/app/src/main/res/layout/map_dialog.xml
+++ b/app/src/main/res/layout/map_dialog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -16,6 +18,45 @@
             style="@android:style/Theme.Dialog">
 
         </com.google.android.gms.maps.MapView>
+
+
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/add_marker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_margin="@dimen/fab_margin"
+                app:fabSize="auto"
+                android:src="@drawable/ic_add_marker" />
+
+
+        </android.support.design.widget.CoordinatorLayout>
+
+
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/dialog_dissmis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|left"
+                android:layout_margin="@dimen/fab_margin"
+                app:fabSize="auto"
+                android:src="@drawable/ic_clear" />
+
+
+        </android.support.design.widget.CoordinatorLayout>
+
     </RelativeLayout>
+
+
 
 </LinearLayout>
