--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
             android:layout_marginBottom="5dp"
             android:background="@drawable/sign_button_style"
             android:text="@string/action_sign_in_short"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/white"
             android:textStyle="bold" />
 
     </LinearLayout>
