--- a/app/src/main/res/values-tr/colors.xml
+++ b/app/src/main/res/values-tr/colors.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="facebook_color">#3b5998</color>
-    <color name="google_blue_color">#4885ed</color>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorLogout">#FFDE6F6F</color>
-    <color name="colorPrimaryDark">#0097A7</color>
-    <color name="buttonGreen">#B2EBF2</color>
+    <color name="colorPrimary">#00bcd4</color>
+    <color name="colorPrimaryDark">#008ba3</color>
+    <color name="primary_light">#7fe1ec</color>
     <color name="colorAccent">#FFEB3B</color>
+    <color name="secondaryLight">#ffff72</color>
+    <color name="secondaryDarkColor">#c8b900</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+
+
+    <color name="facebook_color">#3b5998</color>
+    <color name="google_blue_color">#4885ed</color>
+    <color name="colorLogout">#FFDE6F6F</color>
+    <color name="buttonGreen">#B2EBF2</color>
+    <color name="colorRedtext">#d96161</color>
 
 
     <color name="red_50">#FFEBEE</color>
