--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -55,7 +55,8 @@
                     android:id="@+id/text_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:theme="@style/TextLabel">
 
                     <EditText
                         android:layout_width="match_parent"
@@ -70,7 +71,8 @@
                     android:id="@+id/text_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:theme="@style/TextLabel">
 
                     <EditText
                         android:id="@+id/text"
