--- a/app/src/main/res/values-tr/styles.xml
+++ b/app/src/main/res/values-tr/styles.xml
@@ -38,4 +38,12 @@
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
+    <style name="TextLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/colorPrimary</item>
+        <item name="android:textSize">20sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
