--- a/app/src/main/res/layout/fragment_guest_profile.xml
+++ b/app/src/main/res/layout/fragment_guest_profile.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.project.onur.playerx.fragment.GuestProfileFragment">
 
     <android.support.design.widget.AppBarLayout
@@ -35,12 +34,14 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
+                app:civ_border_width="3dp"
+                app:civ_border_color="@color/white"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="1.5"/>
+                app:layout_collapseParallaxMultiplier="1.5" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
